--- a/doku/spec/spec03-requirements.tex
+++ b/doku/spec/spec03-requirements.tex
@@ -14,6 +14,7 @@ und die Daten in das Archiv schreiben.
 
 \subsection{Steuerung}
 \begin{description}
+        \label{spec:conf}
 	\item [\req{Config-file}{conf}]
 		Die Steuerung des bzw. der Crawler erfolgt über eine Config-Datei.
 		Ist die Config-Datei nicht vorhanden oder kann sie nicht gelesen werden,
