--- a/doku/design/backend/backend.tex
+++ b/doku/design/backend/backend.tex
@@ -106,10 +106,10 @@ submodule kann dabei einer der folgenden Module sein:
         javadapter & Starten und Stoppen der Java Schnittstelle \\
     \hline
     db & Bietet Funktionen um die Datenbank neu zu generieren
-    (entspricht: \ref{req:cmd:recover}) \\
+    (entspricht: \ref{req:Db:recovery}) \\
     \hline
         config & Bietet Zugriff um Werte aus der config zu holen oder zu überschreiben
-        (entspricht: \ref{req:cmd:overwrite}) \\
+        (entspricht: \ref{req:Cr:cmd:overwrite}) \\
     \hline
 \end{tabular}
 \end{table}
