--- a/doku/design/backend/backend.tex
+++ b/doku/design/backend/backend.tex
@@ -47,6 +47,7 @@ if __name__ == '__main__'
 \label{sec:zentrale_module}
 
 \subsection{ConfigHandler}
+\includegraphics[width=\textwidth]{design/backend/gfx/ConfigHandler.pdf}
 \label{sub:confighandler}
 \paragraph{Ablauf:}
 \label{par:ablauf_}
@@ -54,7 +55,7 @@ Grundlegender Ablauf beim Lesen von Configwerten:
 \begin{figure}[h]
 	\centering
 	\label{dia:design:backend:overview}
-	\includegraphics[width=\textwidth]{design/backend/gfx/getting_value.eps}
+	\includegraphics[width=\textwidth]{design/backend/gfx/getting_value.eps}F
 	\caption{Werte aus der Konfigurationsdatei holen}
 \end{figure}
 
@@ -589,6 +590,7 @@ umgesetzt werden.
 
 % paragraph begr_ndung_hintergrund_ (end)
 \subsection{Logger}
+\includegraphics[width=\textwidth]{design/backend/gfx/LogHandler.pdf}
 \paragraph{Beschreibung:}
 \label{par:beschreibung}
 
