--- a/doku/design/backend/backend.tex
+++ b/doku/design/backend/backend.tex
@@ -133,7 +133,7 @@ ein Default-Configtemplate mit dem Pfad zum Archiv enthält, sowie einen leeren 
 in dem später die Crawldaten abgelegt werden.
 Weitere Einstellung müssen händisch in der Config nachgetragen werden.
 \\
-Angelegt wird der Ordner über %\verbatim{archive init /pfad/zum/archive}
+Angelegt wird der Ordner über \texttt{archive init /pfad/zum/archive}.
 \paragraph{Schnittstelle:}
 \label{par:schnittstelle}
 \begin{lstlisting}[language=python]
@@ -252,9 +252,9 @@ class CrawlJob():
 \label{par:begr_ndung_hintergrund_}
 Ein ,,Wget-Wrapper'' wird zum Crawlen verwendet, da wget alle vom iisys benötigten Funktionalitäten bietet und
 in der kürze der Zeit kein gleichwertiger Ersatz implementierbar ist. Um das Crawlen global zu 
-beschleunigen wurde dieses ,,parellisiert'', es werden hier einfach mehrere Wget-Wrapper Instantzen gestartet.
+beschleunigen wurde dieses ,,paralellisiert'', es werden hier einfach mehrere Wget-Wrapper Instantzen gestartet.
 Um die Gesamtgeschwindigkeit des Systems zu steigern wird ebenfalls empfohlen die ,,tmp''-Crawlordner auf ein
-ramfs (\url{http://wiki.debian.org/ramfs}) zu legen.
+ramfs (\footnote{\url{http://wiki.debian.org/ramfs}}) zu legen.
 
 \subsubsection{Wget}
 \label{ssub:wget}
@@ -500,7 +500,7 @@ class DBGenerator:
 \label{ssub:rsync}
 \paragraph{Beschreibung:}
 \label{par:beschreibung_}
-Rsync ist eine Managementschicht für das Unix Tool ,,rsync'' \url{http://de.wikipedia.org/wiki/Rsync}. Rsync wird verwendet um die gecrawlten Daten sauber ins Archiv zu synchronisieren.
+Rsync ist eine Managementschicht für das Unix Tool ,,rsync'' \footnote{\url{http://de.wikipedia.org/wiki/Rsync}}. Rsync wird verwendet um die gecrawlten Daten sauber ins Archiv zu synchronisieren.
 Hierbei wird der aktuelle gecrawlte Inhalt ins Archiv gespiegelt.
 \\
 Rsync wird hier direkt auf Systemebene (\texttt{subprocess.call(['rsync','--archive','--checksum','--delete','src','dest'])}) mit den Paramentern
@@ -580,7 +580,7 @@ class Git:
 \paragraph{Begründung/Hintergrund:}
 \label{par:begr_ndung_hintergrund_}
 Da die Implementierung eines nativen Python Interface zu git selbst mit GitPython
-\url{http://gitorious.org/git-python} oder Dulwich \url{http://www.samba.org/~jelmer/dulwich/}
+\footnote{\url{http://gitorious.org/git-python}} oder Dulwich \footnote{\url{http://www.samba.org/~jelmer/dulwich/}}
 für die uns zu Verfügung stehenden 6 Wochen zu aufwendig ist, wird die Implementierung über
 Python's \texttt{subprocess.call()} Schnittstelle statt finden. Durch den ,,Proof of concept'' können
 erste Erfahrungen mit git als Archivierungssystem gesammelt werden und bei Bedarf eine native Implementierung
@@ -653,9 +653,21 @@ Dabei wird aus den XML Metadaten eine neue Datenbank gebildet.
 
 \section{Util} 
 \label{sec:util}
+\paragraph{Beschreibung:}
+\label{par:beschreibung_}
 Das Util Modul stellt verscheidene Funktionen die von mehreren Modulen genutzt werden bereit.
 Erwähnenswert ist hier der ,,Lockmechanismus''
 auf Dateisystemebene um Daten beim Zugriff auf gemeinsame  Ressourcen zu schützen.
+
+\paragraph{Schnittstelle:}
+\label{par:schnittstelle_}
+\begin{lstlisting}[language=python]
+    def lock(domain_path):
+        """
+        """
+\end{lstlisting}
+
+
 
 \section{Javadapter} 
 \label{sec:javadapter}
@@ -664,7 +676,8 @@ auf Dateisystemebene um Daten beim Zugriff auf gemeinsame  Ressourcen zu schütz
 Der ,,Javadapter'' stellt eine Schnittstelle zwischen Python und Java dar.
 \begin{description}
   \item [Daemon] Er ist als Daemon implementiert, und ist über einen
-    definierten Hostname und Port erreichbar (Hier: \texttt{localhost:42421})
+    definierten Hostname und konfigurierbaren Port erreichbar 
+    (Standardmäßig: \texttt{localhost:42421})
   \item [Kommunikation] Jegliche Interaktion erfolgt über ein
     zeilenbasiertes Textprotokoll. Der Client (Hier: Der Java-Server)
     sendet definerte Kommandos, welche mit mit einer Antwortzeile
@@ -717,10 +730,10 @@ eckigen Klammern angegeben sind.
 \label{par:schnittstellen_}
 
 \begin{lstlisting}[language=python]
-def init_javadapter(path = '.'):
+def init_javadapter():
     """
     default way to start javadapter-server,
-    listening on port 42421
+    listening on a configured port (42421 by default)
     javadapter.lock (including pid) is written to root directory
     """
     pass
