--- a/doku/dokumentation.tex
+++ b/doku/dokumentation.tex
@@ -3,7 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{ngerman}
 \usepackage{fullpage} % kleinere Ränder
-
+\usepackage{float}
 \usepackage{comment} % für größere comments: \begin{comment} ... \end{comment}
 
 % *** für eingefügte (pdf-)Grafiken
