--- a/doku/dokumentation.tex
+++ b/doku/dokumentation.tex
@@ -11,6 +11,9 @@
 %\pdfminorversion=6
 % ***
 
+\usepackage{float}
+\restylefloat{figure}
+
 \usepackage{enumerate} %für geschachtelte Aufzählungen
 
 
